<resources>
    <string name="app_name">Android Fundamental</string>
    <string name="tvLength">Panjang</string>
    <string name="tvWidth">Lebar</string>
    <string name="tvHeight">Tinggi</string>
    <string name="tvResult">Hasil</string>
    <string name="tvResultFromActivity">Hasil Dari Activity</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="tvChoose">Pilih</string>
    <string name="tvChooseNumber">Pilih Angka Yang Kamu Suka</string>
    <string name="tvDataReceived">Data Diterima</string>
    <string name="tvObjectReceived">Object Diterima</string>
    <string name="tvThisIsMoveActivity">Ini MoveActivity</string>
    <string name="tvMove">Pindah</string>
    <string name="tvSetValue">Set Nilai</string>
    <string name="tvHelloWorld">Hello World!</string>
    <string name="tvThisProfile">Ini activity Profile</string>
    <string name="tvThisCategory">Ini fragment Category</string>
    <string name="tvCategoryLifestyle">Ke fragment Lifestyle</string>
    <string name="tvCategoryName">Category Name</string>
    <string name="tvCategoryDescription">Category Description</string>
    <string name="tvToProfile">Ke Halaman Profile Activity</string>
    <string name="tvShowDialog">Tampilkan sebuah dialog</string>
    <string name="helloHomeFragment">Hello Ini Home Fragment</string>
    <string name="tvToCategory">Ke fragment Category</string>
    <string name="tvQuestionCoach">Siapa pelatih tersukses Machester United?</string>
    <string name="tvSirAlexFerguson">Sir Alex Ferguson</string>
    <string name="tvJoseMourinho">Jose Mourinho</string>
    <string name="tvLouisVanGaal">Louis Van Gaal</string>
    <string name="tvDavidMoyes">David Moyes</string>
    <string name="tvClose">Tutup</string>
    <string name="actionResult">Hitung</string>
    <string name="actionMoveActivity">Pindah Activity</string>
    <string name="actionMoveActivityWithData">Pindah Activity Dengan Data</string>
    <string name="actionMoveActivityWithObject">Pindah Activity Dengan Object</string>
    <string name="actionDialNumber">Dial A Number</string>
    <string name="actionMoveActivityForResult">Pindah Activity Untuk Result</string>
    <string name="actionLinearLayout">Linear Layout</string>
    <string name="actionGridLayout">Grid Layout</string>
    <string name="tvSixPhotos">6 Photos</string>
    <string name="contentImagePixel">Google Pixel</string>
    <string name="contentText">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="contentSpecsDisplay">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="contentSpecsSize">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="contentSpecsBattery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="myName">Narenda Wicaksono</string>
    <string name="buy">Beli</string>
    <string name="dummyValue">$735</string>
    <string name="dummyPhotos">6 photos</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_profile">Ke Activity Profile Activity</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_sport">Ke fragment Sport</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_home">Ke fragment Home</string>
    <string name="tvStock">Stock</string>
    <string name="detail_category">Detail Category</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="search_hint">Masukkan kata…</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cart_fragment">This is cart fragment</string>
    <string name="subway_activity">This is subway activity</string>
    <string name="narenda_wicaksono">Narenda Wicaksono</string>
    <string name="narenda_dicoding_com">narenda@dicoding.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <string name="title_activity_bottom_navigation_view">BottomNavigationViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="profile_fragment">This is profile fragment</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Profile</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>
    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="show_list_quotes">Show me list of quotes</string>
    <string name="error400">Bad Request</string>
    <string name="error401">Unauthorized</string>
    <string name="error403">Forbidden</string>
    <string name="error404">Not Found</string>
    <string name="error500">Server Error</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="tvSeconds">%d seconds elapsed</string>
    <string name="tvHelloDicoding">Hello Dicoding!</string>
    <string name="actionCalculateVolume">Hitung Volume</string>
    <string name="actionCalculateSurfaceArea">Hitung Luas</string>
    <string name="actionCalculateCircumference">Hitung Keliling</string>
    <string name="actionSave">Simpan</string>
    <string name="file_new">File New</string>
    <string name="file_open">File Open</string>
    <string name="file_save">File Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="love_manchester_united">Suka manchester united?</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Narenda Wicaksono</string>
    <string name="dummy_email">narenda@dicoding.com</string>
    <string name="dummy_number">123456</string>
    <string name="dummy_age">30</string>
    <string name="dummy_is_love">IsLoveMU</string>
    <string name="nothing">Tidak Ada</string>
    <string name="is_love">Suka Manchester United</string>
    <string name="key_email">email</string>
    <string name="key_age">age</string>
    <string name="key_phone">phone</string>
    <string name="key_love">love</string>
    <string name="key_name">name</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="add">Tambah</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="published_date">Published Date</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi nggak? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="from">from : %s</string>
    <string name="content_title">Content title</string>
    <string name="content_text">Content text</string>
    <string name="subtext">Sub text</string>
    <string name="send_notif">Send Notif</string>
    <string name="activity_home">Home</string>
    <string name="activity_detail">Detail</string>
    <string name="message">Message</string>
    <string name="open_detail">Open Detail</string>
    <string name="notification_title">Hi, how are you?</string>
    <string name="notification_message">Do you have any plan this weekend? Let\'s hangout</string>
    <string name="detail_title">Hola, Good News</string>
    <string name="detail_message">Now you can learn android in Dicoding</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
</resources>