<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.taufik.androidfundamental.activity.ui.home.HomeNavigationDrawerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_navigation_drawer" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.taufik.androidfundamental.activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.taufik.androidfundamental.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.taufik.androidfundamental.fragment.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <activity
        android:id="@+id/nav_subway"
        android:name="com.taufik.androidfundamental.activity.SubwayActivity"
        android:label="@string/menu_subway"
        tools:layout="@layout/activity_subway" />

</navigation>