<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.SharedPreferencesActivity">

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/dummy_name"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle" />

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/dummy_name"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />

    <TextView
        android:id="@+id/tvPhoneNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/dummy_number"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberTitle" />

    <TextView
        android:id="@+id/tvAgeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/dummy_age"
        app:layout_constraintTop_toBottomOf="@id/tvAgeTitle" />

    <TextView
        android:id="@+id/tvIsLoveMuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_manchester_united"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvIsLoveMu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/dummy_is_love"
        app:layout_constraintTop_toBottomOf="@id/tvIsLoveMuTitle" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/tvIsLoveMu"/>

</androidx.constraintlayout.widget.ConstraintLayout>