<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".intent.MoveForResultActivity">

    <TextView
        android:id="@+id/tvChooseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChooseNumber"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/rgNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvChooseNumber">

        <RadioButton
            android:id="@+id/rb50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_50" />

        <RadioButton
            android:id="@+id/rb100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_100" />

        <RadioButton
            android:id="@+id/rb150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_150" />

        <RadioButton
            android:id="@+id/rb200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_200" />

    </RadioGroup>

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvChoose"
        app:layout_constraintTop_toBottomOf="@id/rgNumber"/>

</androidx.constraintlayout.widget.ConstraintLayout>