<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".fragment.DetailCategoryFragment">

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tvCategoryName"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvCategoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tvCategoryDescription"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryName"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvToProfile"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryDescription"/>

    <Button
        android:id="@+id/btnShowDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvShowDialog"
        app:layout_constraintTop_toBottomOf="@id/btnProfile"/>

</androidx.constraintlayout.widget.ConstraintLayout>