<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.BroadcastReceiverActivity">

    <TextView
        android:id="@+id/tvSmsReceiverApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_sms_receiver_app"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/check_sms_permission"
        app:layout_constraintTop_toBottomOf="@id/tvSmsReceiverApp" />

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_file"
        app:layout_constraintTop_toBottomOf="@id/btnCheckPermission" />

</androidx.constraintlayout.widget.ConstraintLayout>